--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,8 +7,7 @@
     ],
     "module": "ESNext",
     "types": [
-      "node",
-      "vitest"
+      "node"
     ],
     "skipLibCheck": true,
     /* Bundler mode */
